k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrapper-admin-ui
  namespace: timeline-scraper
spec:
  selector:
    app: scrapper-admin-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
